# modflow6

./: .codespell.ignore  .codespellrc  .fprettify.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  EXTENDED.md  PARALLEL.md  PARALLELIZATION.md  README.md  action.yml  cmake_mf6_files.txt  code.json  environment-nctest.yml  environment.yml  hook_files.py  meson.build  meson.options  meson_options.txt  pixi.toml  post-merge.py  post-merge.sh  pre-commit.py  requirements.travis.txt  ruff.toml  version.txt
autotest/: .noseids  TestArrayHandlers.f90  TestDevFeature.f90  TestGeomUtil.f90  TestHashTable.f90  TestInputOutput.f90  TestKeyValueList.f90  TestList.f90  TestListIterator.f90  TestMathUtil.f90  TestMemoryContainerIterator.f90  TestMemoryList.f90  TestMemoryStore.f90  TestMessage.f90  TestPtrHashTable.f90  TestSVD.f90  TestSim.f90  TestSwfUtils.f90  TestTimeSelect.f90  TestTimeStepSelect.f90  TestUzfETUtil.f90  TestUzfEtUtil.f90  binary_file_writer.py  budget_file_compare.py  build_exes.py  build_mfio_tex.py  build_nightly.py  common_regression.py  conftest.py  cross_section_functions.py  deactivate_gwf_libmf6_evt01.py  deactivate_gwf_libmf6_rch01.py  deactivate_gwf_libmf6_riv01.py  deactivate_gwf_libmf6_riv02.py  dev_test_gwt_adv01_gwtgwt.py  disu_util.py  ex-gwf-vsc03_sfr.py  ex-gwf_vsc04_lak.py  ex-gwt-vsc01.py  ex-gwt-vsc02-bndtype.py  (+437 more)
autotest/data/: gwfgwf_exg.txt  gwfgwf_lgr_exg.txt  ibc01_ibound.ref  ibc03_dstart1.ref  ibc03_dstart3.ref  npf03_hk.ref  nwtp03_bot.ref  nwtp03_rch.ref  stg-vol-surfarea-vsc04-lak.xlsx
autotest/example/: test_examples.py  test_largetestmodels.py  test_testmodels_mf5to6.py  test_testmodels_mf6.py
autotest/scripts/: cross_section_functions.py
autotest/temp2/: fail  load.py  loadlarge.py  run1.py  sim.py  test004_lpfss_disv.nc
src/: CMakeLists.txt  ConnectionFactory.f90  ConnectionFactory.fypp  ExchangeFactory.f90  ExchangeFactory.fypp  ExchangeRegistrar.f90  ModelFactory.f90  ModelFactory.fypp  ModelRegistrar.f90  RunControl.f90  RunControlFactory.F90  Simulation.f90  SimulationCreate.f90  access_memory.f90  cbackmod.f90  meson.build  mf6.f90  mf6cback.f90  mf6core.f90  mf6lib.f90  mf6lists.f90  mf6main.f90  mf6sub.f90  shared_data.f90  simnamidm.f90  simparidm.f90
src/Distributed/: DistributedBase.f90  DistributedDataBuilder.f90  DistributedExchange.f90  DistributedModel.f90  DistributedSim.f90  IndexMap.f90  InterfaceMap.f90  MappedMemory.f90  Mapper.f90  MpiMessageBuilder.f90  MpiMessageCache.f90  MpiRouter.f90  MpiRunControl.F90  MpiUnitCache.f90  MpiWorld.f90  RemoteMemory.f90  Router.f90  RouterBase.f90  RouterFactory.F90  RouterFactory.f90  SerialRouter.f90  VirtualBase.f90  VirtualDataContainer.f90  VirtualDataLists.f90  VirtualDataManager.f90  VirtualDataStore.f90  VirtualExchange.f90  VirtualGweExchange.f90  VirtualGweModel.f90  VirtualGwfExchange.f90  VirtualGwfModel.f90  VirtualGwtExchange.f90  VirtualGwtModel.f90  VirtualModel.f90  VirtualPrtExchange.f90  VirtualPrtModel.f90  VirtualSolution.f90  VirtualSwfExchange.f90  VirtualSwfModel.f90  mf6dist.f90
src/Exchange/: BaseExchange.f90  DisConnExchange.f90  GhostNode.f90  GweGweExchange.f90  GwfExchangeMover.f90  GwfGweExchange.f90  GwfGwfExchange.f90  GwfGwtExchange.f90  GwfLnfExchange.f90  GwtGwtExchange.f90  GwtGwtExchangeV0.f90  NumericalExchange.f90  SwfGwfExchange.f90  exg-chfgwf.f90  exg-gwegwe.f90  exg-gwfgwe.f90  exg-gwfgwf.f90  exg-gwfgwt.f90  exg-gwfprt.f90  exg-gwfswf.f90  exg-gwfswfidm.f90  exg-gwtgwt.f90  exg-olfgwf.f90  exg-swfgwf.f90  exg-swfgwfidm.f90  gwegweidm.f90  gwfgweidm.f90  gwfgwfidm.f90  gwfgwtidm.f90  gwtgwtidm.f90  meson.build
src/GWF/: GwfBuyInputData.f90  GwfExchangeMover.f90  GwfInterfaceModel.f90  TvBase.f90  VirtualGwfExchange.f90  VirtualGwfModel.f90  exg-gwfgwf.f90  gwf-api.f90  gwf-npf.f90  gwf-obs.f90  gwf-oc.f90  gwf-riv.f90  gwf-tvk.f90  gwf-vsc.f90  gwf.f90  meson.build
src/GWT/: GwtGwtConnection.f90  GwtInterfaceModel.f90  VirtualGwtExchange.f90  exg-gwfgwt.f90  exg-gwtgwt.f90  gwt-cnc.f90  gwt-dsp.f90  gwt-sft.f90  meson.build
src/IDM/: IdmDfnSelector.f90  IdmDfnSelector.fypp  IdmModelPackageInput.f90  IdmModelPackageInput.fypp  exg-gwfgwfidm.f90  gwf-namidm.f90  gwf-welidm.f90  gwt-disuidm.f90  meson.build
src/Idm/: chf-cdbidm.f90  chf-chdidm.f90  chf-cxsidm.f90  chf-dfwidm.f90  chf-dis2didm.f90  chf-disv1didm.f90  chf-disv2didm.f90  chf-evpidm.f90  chf-flwidm.f90  chf-icidm.f90  chf-namidm.f90  chf-pcpidm.f90  chf-stoidm.f90  chf-zdgidm.f90  exg-chfgwfidm.f90  exg-gwegweidm.f90  exg-gwfgweidm.f90  exg-gwfgwfidm.f90  exg-gwfgwtidm.f90  exg-gwfprtidm.f90  exg-gwtgwtidm.f90  exg-olfgwfidm.f90  exg-swfgwfidm.f90  gwe-cndidm.f90  gwe-ctpidm.f90  gwe-disidm.f90  gwe-disuidm.f90  gwe-disvidm.f90  gwe-icidm.f90  gwe-namidm.f90  gwf-chdidm.f90  gwf-disidm.f90  gwf-disuidm.f90  gwf-disvidm.f90  gwf-drnidm.f90  gwf-evtaidm.f90  gwf-evtidm.f90  gwf-ghbidm.f90  gwf-icidm.f90  gwf-namidm.f90  (+55 more)
src/Model/: BaseModel.f90  ExplicitModel.f90  NumericalModel.f90  NumericalPackage.f90  TransportModel.f90  meson.build
src/Solution/: BaseSolution.f90  ConvergenceSummary.f90  ExplicitSolution.f90  LinearSolverBase.f90  LinearSolverFactory.F90  NumericalSolution.f90  ParallelSolution.f90  SolutionFactory.F90  SolutionGroup.f90  meson.build
src/Timing/: ats.f90  meson.build  simtdisidm.f90  tdis.f90
src/Utilities/: ArrayHandlers.f90  ArrayReaders.f90  Attributes.f90  BlockParser.f90  Budget.f90  BudgetFileReader.f90  BudgetObject.f90  BudgetTerm.f90  CharString.f90  Constants.f90  DblHashTable.f90  DeferredStringObject.f90  DevFeature.f90  ErrorUtil.f90  GeomUtil.f90  GridFileReader.f90  HGeoUtil.f90  HashTable.f90  HeadFileReader.f90  InputOutput.f90  Iterator.f90  Iunit.f90  KeyValueList.f90  KeyValueListIterator.f90  KeyValueNode.f90  LineReader.f90  List.f90  ListIterator.f90  ListNode.f90  ListReader.f90  LongLineReader.f90  MathUtil.f90  Message.f90  NameFile.f90  OpenSpec.f90  PackageBudget.f90  (+29 more)
(+1667 files in other folders)
