option('parallel', type : 'boolean', value : false, description : 'Parallel build')
option('mpich', type : 'boolean', value : false, description : 'Use MPICH version of MPI')
option('cray', type : 'boolean', value : false, description : 'Parallel build on CRAY with MPICH')
option('buildname', type : 'string', value : 'mf6', description : 'Optional build name')
